ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-ingress
spec:
  rules:
  - host: blue-green.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: blue-green-service
          servicePort: 80
  - host: blue-green-green.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: blue-green-service
          servicePort: 81
